added tab 'files' for page 'edit section'

--- a/src/edit-section.html
+++ b/src/edit-section.html
@@ -185,10 +185,9 @@
                   </div>
                 </div>
                 <div class="edit-videos__item-delete">
-                  <a href="">
+                  <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#FF5722"/></svg>
                   </a>
-                  
                 </div>
               </div>
               <div class="add-file">
@@ -200,9 +199,26 @@
           </div>
 
           <div class="edit-files js-tab js-tab--active">
-            <div class="edit-videos__head">Files <span class="edit-videos__descr">Drag and drop to reorder</span></div>
+            <div class="edit-files__head">Files <span class="edit-files__descr">Drag and drop to reorder</span></div>
             <form action="/echo" method="POST">
-
+              <div class="edit-files__item-wrap">
+                <div class="edit-files__item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.804 15.227"><path d="M7.39 14.332l3.376-3.416 3.363-3.322c.808-.81 1.244-1.664 1.307-2.563a3.303 3.303 0 0 0-.68-2.34A3.22 3.22 0 0 0 12.7 1.426a3.693 3.693 0 0 0-.64-.053 3.2 3.2 0 0 0-1.433.354c-.476.235-.85.476-1.12.72a32.06 32.06 0 0 0-1.103 1.06L3.76 8.155c-.178.178-.374.36-.587.546-.338.32-.588.562-.747.722-.16.16-.347.382-.56.667a2.33 2.33 0 0 0-.42.84 2.302 2.302 0 0 0-.034.88c.08.56.32.988.72 1.282.4.294.845.44 1.335.44.65 0 1.206-.23 1.668-.694l7.3-7.3c.32-.32.41-.653.267-1-.133-.32-.37-.48-.707-.48-.24 0-.463.102-.667.306a5.547 5.547 0 0 0-.52.507L5.775 9.85l-.92-.894.092-.093 5.178-5.284c.302-.302.602-.53.9-.68.3-.15.653-.227 1.062-.227.08 0 .208.008.387.025.8.152 1.322.614 1.56 1.388.135.418.148.845.04 1.28a2.33 2.33 0 0 1-.626 1.123L8.19 11.744c-.152.15-.405.422-.76.814a36.95 36.95 0 0 1-.795.854 6.45 6.45 0 0 1-.7.606 5.045 5.045 0 0 1-.868.54 3.487 3.487 0 0 1-1.587.376 3.55 3.55 0 0 1-1.722-.427A3.286 3.286 0 0 1 .503 13.32c-.427-.695-.582-1.464-.467-2.31a3.718 3.718 0 0 1 1.08-2.175L7.95 2.002C8.582 1.37 9.076.947 9.432.734A4.95 4.95 0 0 1 12.062 0c.738 0 1.413.147 2.028.44a4.47 4.47 0 0 1 1.735 1.375c.454.596.752 1.28.894 2.055a5.064 5.064 0 0 1-.147 2.442 5.05 5.05 0 0 1-1.268 2.096l-6.9 6.82-.92-.8-.095-.096z" fill="#979696"/></svg>
+                  <span class="edit-files__item-text">Electronic interception.zip</span>
+                </div>
+                <div class="edit-files__item-delete">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#D8E3EE"/></svg>
+                </div>
+              </div>
+              <div class="edit-files__item-wrap">
+                <div class="edit-files__item">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.804 15.227"><path d="M7.39 14.332l3.376-3.416 3.363-3.322c.808-.81 1.244-1.664 1.307-2.563a3.303 3.303 0 0 0-.68-2.34A3.22 3.22 0 0 0 12.7 1.426a3.693 3.693 0 0 0-.64-.053 3.2 3.2 0 0 0-1.433.354c-.476.235-.85.476-1.12.72a32.06 32.06 0 0 0-1.103 1.06L3.76 8.155c-.178.178-.374.36-.587.546-.338.32-.588.562-.747.722-.16.16-.347.382-.56.667a2.33 2.33 0 0 0-.42.84 2.302 2.302 0 0 0-.034.88c.08.56.32.988.72 1.282.4.294.845.44 1.335.44.65 0 1.206-.23 1.668-.694l7.3-7.3c.32-.32.41-.653.267-1-.133-.32-.37-.48-.707-.48-.24 0-.463.102-.667.306a5.547 5.547 0 0 0-.52.507L5.775 9.85l-.92-.894.092-.093 5.178-5.284c.302-.302.602-.53.9-.68.3-.15.653-.227 1.062-.227.08 0 .208.008.387.025.8.152 1.322.614 1.56 1.388.135.418.148.845.04 1.28a2.33 2.33 0 0 1-.626 1.123L8.19 11.744c-.152.15-.405.422-.76.814a36.95 36.95 0 0 1-.795.854 6.45 6.45 0 0 1-.7.606 5.045 5.045 0 0 1-.868.54 3.487 3.487 0 0 1-1.587.376 3.55 3.55 0 0 1-1.722-.427A3.286 3.286 0 0 1 .503 13.32c-.427-.695-.582-1.464-.467-2.31a3.718 3.718 0 0 1 1.08-2.175L7.95 2.002C8.582 1.37 9.076.947 9.432.734A4.95 4.95 0 0 1 12.062 0c.738 0 1.413.147 2.028.44a4.47 4.47 0 0 1 1.735 1.375c.454.596.752 1.28.894 2.055a5.064 5.064 0 0 1-.147 2.442 5.05 5.05 0 0 1-1.268 2.096l-6.9 6.82-.92-.8-.095-.096z" fill="#979696"/></svg>
+                  <span class="edit-files__item-text">Electronic interception 2.zip</span>
+                </div>
+                <div class="edit-files__item-delete">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z" fill="#D8E3EE"/></svg>
+                </div>
+              </div>
               <div class="add-file">
                 <input type="file">
                 <div class="btn btn-action"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.128 9.128"><path d="M0 3.317h3.317V0H5.81v3.317h3.32V5.81H5.81v3.32H3.318V5.81H0V3.318z" /></svg> add video</div>
