fixed htmllint bugs

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -119,12 +119,12 @@
             <form action="/echo" method="POST">
               <div class="edit-course__col edit-course__col--1">
                 <div class="edit-course__row">
-                  <label for="">Title</label>
+                  <label>Title</label>
                   <input type="text">
                 </div>
                 <div class="edit-course__row">
-                  <label for="">Description</label>
-                  <textarea name="" id="" rows="5"></textarea>
+                  <label>Description</label>
+                  <textarea rows="5"></textarea>
                 </div>
                 <div class="edit-course__row">
                   <div class="edit-course__group edit-course__group--1">
@@ -159,41 +159,41 @@
                   </div>
                   <div class="edit-course__group edit-course__group--2">
                     <div class="edit-course__label">repeat every</div>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
+                    <select>
+                      <option>earl</option>
+                      <option>month</option>
+                      <option>2 years</option>
                     </select>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
+                    <select>
+                      <option>earl</option>
+                      <option>month</option>
+                      <option>2 years</option>
                     </select>
-                    <select name="" id="">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
+                    <select>
+                      <option>earl</option>
+                      <option>month</option>
+                      <option>2 years</option>
                     </select>
                   </div>
                 </div>
                 <div class="edit-course__row">
-                  <label for="">Setting 1</label>
+                  <label>Setting 1</label>
                   <input type="text">
                 </div>
                 <div class="edit-course__row">
                   <div class="edit-course__group edit-course__group--half">
-                    <label for="">Setting 2</label>
+                    <label>Setting 2</label>
                     <input type="text">
                   </div>
                   <div class="edit-course__group edit-course__group--half">
-                    <label for="">Setting 3</label>
+                    <label>Setting 3</label>
                     <input type="text">
                   </div>
                 </div>
               </div>
               <div class="edit-course__col edit-course__col--2">
                 <div class="edit-course__row">
-                  <label for="">Picture</label>
+                  <label>Picture</label>
                   <div class="upload-file upload-file--edit" style="background-image: url('img/course-bg-big-2.png');">
                     <input type="file">
                     <span class="upload-file__btn">Replace</span>
@@ -206,8 +206,8 @@
                     <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in course</label>
                   </div>
                   <div class="checkbox checkbox--white-bg">
-                    <input type="checkbox" id="ch7">
-                    <label for="ch7" class="checkbox__label checkbox__label--dark">Forum is enabled in sections</label>
+                    <input type="checkbox" id="ch87">
+                    <label for="ch87" class="checkbox__label checkbox__label--dark">Forum is enabled in sections</label>
                   </div>
                 </div>
                 <div class="edit-course__row">
@@ -215,15 +215,15 @@
                 </div>
                 <div class="edit-course__row">
                   <div class="edit-course__select-group">
-                    <select name="" id="" class="select select--long">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
+                    <select class="select select--long">
+                      <option>earl</option>
+                      <option>month</option>
+                      <option>2 years</option>
                     </select>
-                    <select name="" id="" class="select select--long">
-                      <option value="">earl</option>
-                      <option value="">month</option>
-                      <option value="">2 years</option>
+                    <select class="select select--long">
+                      <option>earl</option>
+                      <option>month</option>
+                      <option>2 years</option>
                     </select>
                   </div>
                 </div>
@@ -262,25 +262,8 @@
         </div>
       </div>
       
-
-
     </div>
-    
   </div>
-
-<!--   <footer class="footer">
-    <div class="container container--small">
-      <nav class="menu-footer">
-        <ul class="menu-footer__list">
-          <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">About</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Manual</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">FAQ</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Help</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer> -->
 
   <script src="js/script.min.js"></script>
 </body>
