--- a/src/edit-section.html
+++ b/src/edit-section.html
@@ -125,12 +125,12 @@
             <form action="/echo" method="POST">
               <div class="edit-course__col edit-course__col--1">
                 <div class="edit-course__row">
-                  <label for="">Title</label>
+                  <label>Title</label>
                   <input type="text">
                 </div>
                 <div class="edit-course__row">
-                  <label for="">Description</label>
-                  <textarea name="" id="" rows="5"></textarea>
+                  <label>Description</label>
+                  <textarea rows="5"></textarea>
                 </div>
                 <div class="edit-course__row">
                   <div class="checkbox checkbox--white-bg">
@@ -154,7 +154,7 @@
                 </div>
                 <div class="edit-videos__item-about">
                   <div class="edit-videos__item-row">
-                    <label for="">Title</label>
+                    <label>Title</label>
                   </div>
                   <div class="edit-videos__item-row">
                     <input type="text" class="edit-videos__item-input">
@@ -174,13 +174,13 @@
                 </div>
                 <div class="edit-videos__item-about">
                   <div class="edit-videos__item-row">
-                    <label for="">Title</label>
+                    <label>Title</label>
                   </div>
                   <div class="edit-videos__item-row">
                     <input type="text" class="edit-videos__item-input">
                     <div class="checkbox-able">
-                      <input type="checkbox" id="ch10">
-                      <label for="ch10" class="checkbox-able__label"><span class="checkbox-able__label-text">Downoadable</span></label>
+                      <input type="checkbox" id="ch13">
+                      <label for="ch13" class="checkbox-able__label"><span class="checkbox-able__label-text">Downoadable</span></label>
                     </div>
                   </div>
                 </div>
@@ -228,26 +228,11 @@
           </div>
         </div>
       </div>
-      
-
 
     </div>
     
   </div>
 
-<!--   <footer class="footer">
-    <div class="container container--small">
-      <nav class="menu-footer">
-        <ul class="menu-footer__list">
-          <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">About</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Manual</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">FAQ</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Help</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer> -->
 
   <script src="js/script.min.js"></script>
 </body>
