--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -186,7 +186,7 @@
                   </div>
                 </div>
                 <div class="edit-quest__item-row">
-                  <textarea name="" id=""  rows="3"></textarea>
+                  <textarea rows="3"></textarea>
                   <div class="edit-quest__item-imgs">
                     <a href="#" class="edit-quest__item-img" style="background-image: url('img/course-bg-1.jpg');">
                       <button class="btn btn--close"></button>
@@ -223,8 +223,8 @@
                     </div>
                     <div class="edit-quest__item-col edit-quest__item-col--3">
                       <div class="checkbox-able">
-                        <input type="checkbox" id="ch10">
-                        <label for="ch10" class="checkbox-able__label"></label>
+                        <input type="checkbox" id="ch16">
+                        <label for="ch16" class="checkbox-able__label"></label>
                       </div>
                     </div>
                     <div class="edit-quest__item-col edit-quest__item-col--4">
@@ -251,25 +251,8 @@
         </div>
       </div>
       
-
-
     </div>
-    
   </div>
-
-<!--   <footer class="footer">
-    <div class="container container--small">
-      <nav class="menu-footer">
-        <ul class="menu-footer__list">
-          <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">About</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Manual</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">FAQ</a></li>
-          <li class="menu-footer__item"><a href="#" class="menu-footer__link">Help</a></li>
-        </ul>
-      </nav>
-    </div>
-  </footer> -->
 
   <script src="js/script.min.js"></script>
 </body>
