--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
       <li><a href="instructors.html">Instructors</a></li>
       <li><a href="profile-edit.html">Profile edit</a></li>
 
-      <li style="list-style: none; margin:15px 0 10px;"><b>EXTRA</b></li>
+      <li style="list-style: none; margin:15px 0 10px;"><b>EDIT</b></li>
       <li><a href="edit-course.html">Course page</a></li>
       <li><a href="edit-section.html">Section</a></li>
       <li><a href="edit-test.html">Test</a></li>
