--- a/src/edit-forum.html
+++ b/src/edit-forum.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  
+
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
-        <div class="col-md-3 col-xs-12">
+        <div class="col-md-4 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
         </div>
-        <div class="col-md-9 col-xs-12 header__menu">
+        <div class="col-md-8 col-xs-12 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  
+
   <div class="edit-area page-body">
     <div class="wrapper">
       <h1 class="edit-area__title h2">3496 Aviation Weather Forecasts course</h1>
@@ -149,11 +149,11 @@
         </div>
 
       </div>
-      
+
 
 
     </div>
-    
+
   </div>
 
 
