Зафиксировал главную страницу эдит

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <title>OLS - Edit сourse</title>
   <meta name="robots" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body class="edit">
 
   <header class="header">
-    <div class="container">
+    <div class="wrapper">
       <div class="row">
         <div class="col-md-4 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
