--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="wrapper">
       <div class="row">
         <div class="col-md-4">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
