--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <title>OLS - Edit test</title>
   <meta name="robots" content="noindex, nofollow">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="edit">
 
   <header class="header">
     <div class="wrapper">
