Внёс правки по последним изменениям

--- a/src/instructor.html
+++ b/src/instructor.html
@@ -80,7 +80,7 @@
           <div class="courses-list__sub-title">instructor(s)</div>
         </div>
         <div class="courses-list__col courses-list__col--7 tablet-hide">
-          <div class="courses-list__sub-title text-right">progress</div>
+          <div class="courses-list__sub-title text-right">staff progress</div>
         </div>
       </header>
       <!-- course -->
