--- a/src/profile-edit.html
+++ b/src/profile-edit.html
@@ -47,7 +47,7 @@
   <div class="profile-edit page-body">
     <div class="container">
       <div class="form-alert">
-        <span class="form-alert__text">Changes saved</span><a href="#" class="form-alert__btn btn btn--ok">Ок</a>
+        <span class="form-alert__text">Changes saved</span><a href="#" class="form-alert__btn btn btn--ok js-close-alert">Ок</a>
       </div>
       <form action="/echo" method="POST">
         <div class="profile-edit__head">
