--- a/src/courses.html
+++ b/src/courses.html
@@ -206,10 +206,10 @@
     <div class="footer__content">
       <div class="container">
         <div class="row">
-          <div class="col-md-2 col-xs-12 pull-right">
+          <div class="col-md-2 col-sm-4 col-xs-12 pull-right">
             <a href="#" class="footer__open-version">Version 1.1.3 beta</a>
           </div>
-          <div class="col-md-6 col-xs-12">
+          <div class="col-md-6 col-sm-8 col-xs-12">
             <div class="footer__copyright">© <a href="#">Türkiye Bilimsel ve Teknolojik Araştırma Kurumu</a>, 2016</div>
           </div>
           <div class="col-md-4 col-xs-12">
