JS для нового футера

--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -264,7 +264,7 @@
     </div>
   </div>
 
-  <footer class="footer footer--open">
+  <footer class="footer">
     <div class="footer__version">
       <div class="wrapper">
         <a href="#" class="btn btn--footer js-footer-hide">Hide</a>
