--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -284,8 +284,8 @@
           <div class="col-md-4 col-xs-12">
             <nav class="footer__nav">
               <ul class="footer__nav-list">
-                <li class="footer__nav-item"><a href="#" class="footer__nav-link">About</a></li>
-                <li class="footer__nav-item"><a href="#" class="footer__nav-link">Help</a></li>
+                <li class="footer__nav-item"><a href="about.html" class="footer__nav-link">About</a></li>
+                <li class="footer__nav-item"><a href="help.html" class="footer__nav-link">Help</a></li>
                 <li class="footer__nav-item"><a href="#" class="footer__nav-link">Contact</a></li>
               </ul>
             </nav>
