Тираж не адаптивного футер

--- a/src/edit-section.html
+++ b/src/edit-section.html
@@ -227,11 +227,39 @@
           </div>
         </div>
       </div>
-
     </div>
-
   </div>
 
+  <footer class="footer">
+    <div class="footer__version">
+      <div class="wrapper">
+        <a href="#" class="btn btn--footer js-footer-hide">Hide</a>
+        <p class="footer__version-text">Version 1.1.3 beta, released 3/2/2016</p>
+        <p class="footer__text">Release notes are documents that are shared with end users, customers and clients of an organization. They detail the corrections, changes or enhancements made to the service or product the company provides. This document is usually circulated only after the product or service is thoroughly tested and approved against the specification provided by the development team. Release notes can also contain test results and information about the test procedure. This kind of information gives readers of the release note more confidence in the fix/change done; this information also enables implementers of the change to conduct rudimentary acceptance tests. Release notes are sometimes written by a technical writer, Project Development Lead, Project Manager, or developers.</p>
+      </div>
+    </div>
+    <div class="footer__content">
+      <div class="wrapper">
+        <div class="row">
+          <div class="col-md-2 col-sm-4 col-xs-12 pull-right">
+            <a href="#" class="footer__open-version">Version 1.1.3 beta</a>
+          </div>
+          <div class="col-md-6 col-sm-8 col-xs-12">
+            <div class="footer__copyright">© <a href="#">Türkiye Bilimsel ve Teknolojik Araştırma Kurumu</a>, 2016</div>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <nav class="footer__nav">
+              <ul class="footer__nav-list">
+                <li class="footer__nav-item"><a href="about.html" class="footer__nav-link">About</a></li>
+                <li class="footer__nav-item"><a href="help.html" class="footer__nav-link">Help</a></li>
+                <li class="footer__nav-item"><a href="#" class="footer__nav-link">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="js/script.min.js"></script>
 </body>
