--- a/src/courses.html
+++ b/src/courses.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4 col-xs-12">
-            <div class="logo">Online <span class="logo__second">Learning System</span></div>
+            <a class="logo">Online <span class="logo__second">Learning System</span></a>
           </div>
           <div class="col-md-8 col-xs-12 header__menu">
             <nav class="menu">
