--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div class="row">
         <div class="col-md-4">
-          <div class="logo">Online <span class="logo__second">Learning System</span></div>
+          <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
         </div>
         <div class="col-md-8 header__menu">
           <nav class="menu">
