--- a/src/edit-course.html
+++ b/src/edit-course.html
@@ -196,7 +196,7 @@
                   <div class="upload-file upload-file--edit" style="background-image: url('img/course-bg-big-2.png');">
                     <input type="file">
                     <span class="upload-file__btn">Replace</span>
-                    <button class="btn btn--close"></button>
+                    <button type="button" class="btn btn--close js-delete-image" data-target="upload-file"></button>
                   </div>
                 </div>
                 <div class="edit-course__row">
