--- a/src/edit-test.html
+++ b/src/edit-test.html
@@ -132,7 +132,7 @@
                   <a href="#" class="btn-test">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.666 13.665"><path d="M1.226 9.93l2.485 2.487L0 13.665 1.226 9.93zm1.003-.9l6.843-6.845L11.46 4.57l-6.845 6.844L2.23 9.03zm7.802-7.804L11.08.146c.11-.098.234-.146.368-.146s.256.048.368.145L13.52 1.85a.534.534 0 0 1 .146.374.492.492 0 0 1-.145.362l-1.103 1.026-2.385-2.386z"/></svg>
                   </a>
-                  <a href="#" class="btn-test">
+                  <a href="#" class="btn-test js-test-delete">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z"/></svg>
                   </a>
                 </div>
@@ -145,7 +145,7 @@
                   <a href="#" class="btn-test">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.666 13.665"><path d="M1.226 9.93l2.485 2.487L0 13.665 1.226 9.93zm1.003-.9l6.843-6.845L11.46 4.57l-6.845 6.844L2.23 9.03zm7.802-7.804L11.08.146c.11-.098.234-.146.368-.146s.256.048.368.145L13.52 1.85a.534.534 0 0 1 .146.374.492.492 0 0 1-.145.362l-1.103 1.026-2.385-2.386z"/></svg>
                   </a>
-                  <a href="#" class="btn-test">
+                  <a href="#" class="btn-test js-test-delete">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z"/></svg>
                   </a>
                 </div>
@@ -158,7 +158,7 @@
                   <a href="#" class="btn-test">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.666 13.665"><path d="M1.226 9.93l2.485 2.487L0 13.665 1.226 9.93zm1.003-.9l6.843-6.845L11.46 4.57l-6.845 6.844L2.23 9.03zm7.802-7.804L11.08.146c.11-.098.234-.146.368-.146s.256.048.368.145L13.52 1.85a.534.534 0 0 1 .146.374.492.492 0 0 1-.145.362l-1.103 1.026-2.385-2.386z"/></svg>
                   </a>
-                  <a href="#" class="btn-test">
+                  <a href="#" class="btn-test js-test-delete">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z"/></svg>
                   </a>
                 </div>
@@ -179,7 +179,7 @@
                     <a href="#" class="btn-test">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 13.666 13.665"><path d="M1.226 9.93l2.485 2.487L0 13.665 1.226 9.93zm1.003-.9l6.843-6.845L11.46 4.57l-6.845 6.844L2.23 9.03zm7.802-7.804L11.08.146c.11-.098.234-.146.368-.146s.256.048.368.145L13.52 1.85a.534.534 0 0 1 .146.374.492.492 0 0 1-.145.362l-1.103 1.026-2.385-2.386z"/></svg>
                     </a>
-                    <a href="#" class="btn-test">
+                    <a href="#" class="btn-test js-test-delete">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10.581 10.582"><path d="M0 8.31l3.02-3.02L0 2.27 2.27 0l3.02 3.02L8.31 0l2.27 2.27-3.02 3.02 3.02 3.02-2.27 2.272-3.02-3.02-3.02 3.02L0 8.312z"/></svg>
                     </a>
                   </div>
