--- a/src/course-test.html
+++ b/src/course-test.html
@@ -37,7 +37,7 @@
 
   <div class="course-section">
 
-    <div class="section-nav page-header">
+    <div class="section-nav page-header page-header--course-section">
       <div class="container">
         <p class="section-nav__title">3496 Aviation Weather Forecasts course (5/11 completed)</p>
         <div class="section-nav__links">
