added tooltips for section-progress, added top/bottom tooltips

--- a/src/course-section.html
+++ b/src/course-section.html
@@ -57,37 +57,59 @@
 
           <div class="section-nav__progress section-progress">
             <a href="#" class="section-progress__step section-progress__step--passed">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 1">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step section-progress__step--passed">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 2">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step section-progress__step--passed">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 3">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step section-progress__step--passed">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Test 1">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step section-progress__step--passed">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 4">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step section-progress__step--current">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 5">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 6">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Test 2">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Test 3">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 7">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
             <a href="#" class="section-progress__step">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              <span class="section-progress__step-icon tooltip tooltip--top" data-tooltip="Aviation Weather Forecasts course. Section 8">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
+              </span>
             </a>
           </div>
 
