--- a/src/course.html
+++ b/src/course.html
@@ -118,8 +118,8 @@
               <div class="course-sections__item-time tablet-hide">42 min</div>
               <ul class="course-sections__media-list tablet-hide">
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--play" data-tooltip="Experimental graphical forecats video">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--play tooltip tooltip--bottom" data-tooltip="Experimental graphical forecats video">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" /></svg>
                   </a>
                 </li>
               </ul>
@@ -136,13 +136,13 @@
               <div class="course-sections__item-time tablet-hide">2 hrs</div>
               <ul class="course-sections__media-list tablet-hide">
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--play">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--play tooltip tooltip--bottom" data-tooltip="Graphical forecats video pro. Part 1">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" /></svg>
                   </a>
                 </li>
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--play">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--play tooltip tooltip--bottom" data-tooltip="Graphical forecats video pro. Part 2">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" /></svg>
                   </a>
                 </li>
               </ul>
@@ -159,8 +159,8 @@
               <div class="course-sections__item-time tablet-hide">24 min</div>
               <ul class="course-sections__media-list tablet-hide">
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--play">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--play tooltip tooltip--bottom" data-tooltip="Icing. Video for beginners">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z"/></svg>
                   </a>
                 </li>
               </ul>
@@ -177,13 +177,13 @@
               <div class="course-sections__item-time tablet-hide">40 min</div>
               <ul class="course-sections__media-list tablet-hide">
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--attach">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.804 15.227"><path d="M7.39 14.332l3.376-3.416 3.363-3.322c.809-.81 1.245-1.664 1.308-2.563a3.303 3.303 0 0 0-.68-2.342 3.22 3.22 0 0 0-2.056-1.262 3.693 3.693 0 0 0-.64-.053c-.48 0-.959.118-1.434.354-.476.235-.85.476-1.121.72a32.06 32.06 0 0 0-1.102 1.061L3.76 8.154c-.178.178-.374.36-.587.546-.338.321-.588.562-.747.722-.16.16-.347.382-.56.667a2.33 2.33 0 0 0-.421.841 2.302 2.302 0 0 0-.033.88c.08.56.32.988.72 1.282.401.294.845.44 1.335.44.649 0 1.206-.231 1.668-.694l7.3-7.3c.321-.32.409-.653.267-1.001-.133-.32-.369-.48-.707-.48-.24 0-.463.103-.667.307a5.547 5.547 0 0 0-.52.507L5.775 9.848l-.921-.894.093-.093 5.178-5.285c.302-.302.602-.529.901-.68.298-.151.652-.227 1.061-.227.08 0 .208.009.387.026.801.152 1.322.614 1.561 1.388.134.418.147.845.04 1.281-.106.436-.315.81-.627 1.122L8.19 11.744c-.152.151-.405.422-.761.814-.347.382-.612.667-.794.854a6.451 6.451 0 0 1-.7.606 5.045 5.045 0 0 1-.868.541 3.487 3.487 0 0 1-1.587.375 3.55 3.55 0 0 1-1.722-.427 3.286 3.286 0 0 1-1.255-1.188c-.427-.694-.582-1.463-.467-2.308a3.718 3.718 0 0 1 1.081-2.176L7.95 2.002C8.582 1.37 9.076.947 9.432.734A4.95 4.95 0 0 1 12.061 0c.739 0 1.414.147 2.029.44.702.32 1.281.778 1.735 1.375.454.596.752 1.281.894 2.055a5.064 5.064 0 0 1-.146 2.442 5.05 5.05 0 0 1-1.268 2.096l-6.9 6.82-.921-.801-.094-.095z" fill="#979696"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--attach tooltip tooltip--bottom" data-tooltip="Experimental Grapical Forecasts tutorial">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.804 15.227"><path d="M7.39 14.332l3.376-3.416 3.363-3.322c.809-.81 1.245-1.664 1.308-2.563a3.303 3.303 0 0 0-.68-2.342 3.22 3.22 0 0 0-2.056-1.262 3.693 3.693 0 0 0-.64-.053c-.48 0-.959.118-1.434.354-.476.235-.85.476-1.121.72a32.06 32.06 0 0 0-1.102 1.061L3.76 8.154c-.178.178-.374.36-.587.546-.338.321-.588.562-.747.722-.16.16-.347.382-.56.667a2.33 2.33 0 0 0-.421.841 2.302 2.302 0 0 0-.033.88c.08.56.32.988.72 1.282.401.294.845.44 1.335.44.649 0 1.206-.231 1.668-.694l7.3-7.3c.321-.32.409-.653.267-1.001-.133-.32-.369-.48-.707-.48-.24 0-.463.103-.667.307a5.547 5.547 0 0 0-.52.507L5.775 9.848l-.921-.894.093-.093 5.178-5.285c.302-.302.602-.529.901-.68.298-.151.652-.227 1.061-.227.08 0 .208.009.387.026.801.152 1.322.614 1.561 1.388.134.418.147.845.04 1.281-.106.436-.315.81-.627 1.122L8.19 11.744c-.152.151-.405.422-.761.814-.347.382-.612.667-.794.854a6.451 6.451 0 0 1-.7.606 5.045 5.045 0 0 1-.868.541 3.487 3.487 0 0 1-1.587.375 3.55 3.55 0 0 1-1.722-.427 3.286 3.286 0 0 1-1.255-1.188c-.427-.694-.582-1.463-.467-2.308a3.718 3.718 0 0 1 1.081-2.176L7.95 2.002C8.582 1.37 9.076.947 9.432.734A4.95 4.95 0 0 1 12.061 0c.739 0 1.414.147 2.029.44.702.32 1.281.778 1.735 1.375.454.596.752 1.281.894 2.055a5.064 5.064 0 0 1-.146 2.442 5.05 5.05 0 0 1-1.268 2.096l-6.9 6.82-.921-.801-.094-.095z" /></svg>
                   </a>
                 </li>
                 <li class="course-sections__media-item">
-                  <a href="#" class="course-icon-link course-icon-link--play">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" fill="#818181"/></svg>
+                  <a href="#" class="course-icon-link course-icon-link--play tooltip tooltip--bottom" data-tooltip="Experimental Grapical Forecasts video tutorial for beginners">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.101 9.901"><path d="M0 9.901V0l8.101 4.951L0 9.901z" /></svg>
                   </a>
                 </li>
               </ul>
